--- a/src/views/pages/saidaEstoque.ejs
+++ b/src/views/pages/saidaEstoque.ejs
@@ -36,6 +36,10 @@
       min-height: 36vh;
    }
 
+   .w-15 {
+      width: 15% !important;
+   }
+
    .w-90 {
       width: 90% !important;
    }
@@ -113,8 +117,8 @@
                         <label for="searchInput" class="form-label fw-bold">Pesquisar:</label>
                         <div class="search-container">
                            <input type="text" id="searchInput" class="form-control" placeholder="Digite o número do tombo ou uma palavra da descrição">
-                           <button id="searchBtn" class="btn btn-primary btn-sm">Pesquisar</button>
-                           <button id="clearSearch" class="btn btn-secondary btn-sm">Limpar</button>
+                           <button id="searchBtn" class="btn btn-primary btn-md w-15">Pesquisar</button>
+                           <button id="clearSearch" class="btn btn-secondary btn-md w-15">Limpar</button>
                         </div>
                      </div>
                      <div id="tombo_div" class="mb-2">
