--- a/src/views/pages/tabelaItensNovos.ejs
+++ b/src/views/pages/tabelaItensNovos.ejs
@@ -119,7 +119,7 @@
 <body>
    <%- include('../partials/header') %>
 
-   <div class="caixa w-90 p-4 mx-auto">
+   <div class="caixa p-4 mx-auto">
       <div class="border caixa-externa p-4 shadow-sm rounded">
          <div class="row align-items-center mb-3 px-3">
             <div class="col d-flex justify-content-between align-items-center bg-success py-2 rounded" style="border-bottom: 4px solid orange;">
