--- a/src/views/pages/login.ejs
+++ b/src/views/pages/login.ejs
@@ -47,7 +47,9 @@
                </form>
                <div class="text-center mt-4">
                   <a href="/register" class="text-decoration-none text-secondary">Primeiro acesso? Cadastre-se aqui</a>
-               </div>
+                  <br> <!-- Adicione esta linha -->
+                  <a href="/forgot-password" class="text-decoration-none text-secondary mt-2">Esqueceu sua senha?</a>
+                </div>
          </div>
       </div>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
