--- a/src/views/pages/register.ejs
+++ b/src/views/pages/register.ejs
@@ -54,6 +54,21 @@
                   </div>
 
                   <div class="form-group mb-3">
+                     <label for="email" class="form-label">E-mail</label>
+                     <div class="input-group">
+                       <span class="input-group-text"><i class="fas fa-envelope"></i></span>
+                       <input 
+                         type="email" 
+                         class="form-control input-custom" 
+                         id="email" 
+                         name="email" 
+                         placeholder="seu.email@exemplo.com" 
+                         required
+                       >
+                     </div>
+                   </div>
+
+                  <div class="form-group mb-3">
                      <label for="postoGrad" class="form-label">Posto/Graduação</label>
                      <div class="input-group">
                         <span class="input-group-text"><i class="fas fa-star"></i></span>
